included results from test

--- a/design.tex
+++ b/design.tex
@@ -106,15 +106,20 @@ The iPad app was written in Swift using XCode. The app layout is shown in Figure
 \label{fig: storyboard}
 \end{figure}
 
-Once the user logs in, the app connects to the Bluefruit LE SPI Friend and receives the strings of data sent by the Bluefruit and checks that the \textit{ID} and newline character are in place. Depending on the \textit{ID}, the app stores the \textit{Time} and \textit{Voltage} string in arrays corresponding to the neurochemical signal being read, i.e. if the \textit{ID = G}, the \textit{Time} is appended to an array called  {\tt{Gtime}} and \textit{Voltage} is appended to an array called {\tt{Gvoltage}}. Each new data string for a given neurochemical signal is received every 1s. The \textit{Time} string received is converted from the time in milliseconds into the real clock time at which the signal was read from the Arduino analogue input pin. It is important that the signals are timestamped with the real time of recording as opposed to the time at which the signals were received on the app because over time there may be a lag in transmission.
+Once the user logs in, the app connects to the Bluefruit LE SPI Friend and receives the strings of data sent by the Bluefruit and checks that the \textit{ID} and newline character are in place. Depending on the \textit{ID}, the app stores the \textit{Time} and \textit{Voltage} string in arrays corresponding to the neurochemical signal being read, i.e. if the \textit{ID = G}, the \textit{Time} is appended to an array called  {\tt{Gtime}} and \textit{Voltage} is appended to an array called {\tt{Gvoltage}}. Each new data string for a given neurochemical signal is received every 1s. 
+
+\subsubsection{Real Time} \label{section: real time}
+The \textit{Time} string received is converted from the time in milliseconds into the real clock time at which the signal was read from the Arduino analogue input pin. It is important that the signals are timestamped with the real time of recording as opposed to the time at which the signals were received on the app because there may be a lag in transmission which may vary over time.
+
+The real time is calculated by taking the clock time at which the first input is received on the app, and subtracting the number of milliseconds encoded in the first \textit{Time} string. This provides a reference time, which is the real clock time at which the Arduino was first powered on, assuming that wireless transmission is negligible. Type casting is used to convert all subsequent \textit{Time} strings into doubles so that the time in milliseconds can be added to the reference time to obtain the real time at which the value was recorded on the Arduino.
 
 
 \subsubsection{Charts API}
-To convey the information to the clinician clearly, the data received was displayed graphically using the Charts API developed by Daniel Gindi. The API allowed for basic graphs to be fully customised based on the needs of this project. The graphs display the voltage recorded from an input pin against the real clock time of the reading for each neurochemical signal. The app allows for all three signals to be viewed on one graph, as seen on the Chemical Composition page in Figure~\ref{fig: storyboard}, or as individual plots shown in pages 3a, 3b and 3c. These individual plots can be accessed by clicking on the graph legends on the Chemical Composition page, located above the graph. All graphs can be scaled and are zoombale, allowing to clearly view specific data. Furthermore, clicking on a specific point on a plot displays a grey bubble which shows the corresponding x and y value at that point. This feature can be seen on the Chemical Composition page in Figure~\ref{fig: storyboard} but works across all plots on all pages.
+To convey the information to the clinician clearly, the data received was displayed graphically using the Charts API developed by Daniel Gindi. The API allowed for basic graphs to be fully customised based on the needs of this project. The graphs display the voltage recorded from an input pin against the real clock time of the reading for each neurochemical signal. The app allows for all three signals to be viewed on one graph, as seen on the Chemical Composition page in Figure~\ref{fig: storyboard}, or as individual plots shown in pages 3a, 3b and 3c. These individual plots can be accessed by clicking on the graph legends on the Chemical Composition page, located above the graph. All graphs can be scaled and are zoombale, allowing to clearly view specific data. Furthermore, clicking on a specific point on a plot displays a grey bubble which shows the corresponding $x$ and $y$ value at that point. This feature can be seen on the Chemical Composition page in Figure~\ref{fig: storyboard} but works across all plots on all pages.
 
 
 \subsubsection{Calibration}
-In the individual concentration plots on pages 3a, 3b, and 3c in Figure~\ref{fig: storyboard}, in the top right corner of the graphs there is a segmented control button that has \textit{Voltage} on the left and \textit{Concentration} on the right. Selecting a button allows to view the graph with either voltage or concentration on the y-axis. To convert the voltage values received into the corresponding concentration of the neurochemical signal in the brain, the relationship between the two needs to be known. This is obtained through calibration. 
+In the individual concentration plots on pages 3a, 3b, and 3c in Figure~\ref{fig: storyboard}, in the top right corner of the graphs there is a segmented control button that has \textit{Voltage} on the left and \textit{Concentration} on the right. Selecting a button allows to view the graph with either voltage or concentration on the $y$-axis. To convert the voltage values received into the corresponding concentration of the neurochemical signal in the brain, the relationship between the two needs to be known. This is obtained through calibration. 
 
 \begin{table}[h!]
 \centering
