additional references and changes to intro

--- a/discussion.tex
+++ b/discussion.tex
@@ -35,3 +35,4 @@ To make the app more user friendly and improve its functionality, the app could 
 
 Furthermore, the app could be programmed to identify when an SD occurs, by identifying the transient changes that characterise an SD, and send a push notification or alert to inform the clinician. Highlighting the points in the data that could potentially indicate an SD would allow for the clinician to quickly identify points of concern and allow for quicker diagnosis than the clinician manually analysing the data. However, the expected change in concentration during an SD can vary by a large amount i.e.glucose transiently decreases by approximately 18-93$\mu M$ and lactate transiently increases by 5-100$\mu M$. Therefore to improve how effectively the app identifies an SD, using machine leaning, the app could be trained with a large data set of spreading depolarisation waves and learn to identify a SD in real time. 
 
+\subsection{Conclusion}
