--- a/report.tex
+++ b/report.tex
@@ -8,6 +8,13 @@
 
 \begin{abstract}
     250 words to summarise the project
+    % Sentence of two about TBI and secondary TBI
+    % Sentence about aim of the project
+    % Sentence about the prototype
+    % Two sentences about the app
+    % Sentence about things that were tested to prove
+    % Summarise results/discussion about testing
+    % Future improvements
     
 \end{abstract}
 
@@ -16,24 +23,28 @@
 
 \section{Introduction}
 \input{intro.tex}
+\newpage
 
-\section{Design}
+\section{Prototype Design}
 \input{design.tex}
+\newpage
 
 \section{Testing}
 \input{testing.tex}
+\newpage
 
 \section{Results}
 \input{results.tex}
+\newpage
 
 \section{Discussion}
 \input{discussion.tex}
+\newpage
 
-\section{Conclusion}
 
 
 \section{Acknowledgements}
-I would like to thank Professor Martyn. G Boutelle for allowing me to pursue this project that has greatly diversified my skill set, and for guiding me through this project. I would also like to thank Dr. Michelle Rogers for helping me navigate through LabChart and understand the data. I would like to thank Aidan Wickham for providing me with details about his PCB, which this project is based on. I would also like to thank Georgios Zafeiropoulos and Konstantinos Petkos for guiding me through the best methods to validate and test my prototype. 
+I would like to thank Professor Martyn Boutelle for allowing me to pursue this project that has greatly diversified my skill set, and for guiding me through this project. I would also like to thank Dr. Michelle Rogers for helping me navigate through LabChart and understanding the data. I would like to thank Aidan Wickham for providing me with details about his PCB, which this project is based on. I would also like to thank Georgios Zafeiropoulos and Konstantinos Petkos for guiding me through the best methods to validate and test my prototype. 
 
 Finally, I would like to thank my parents for believing in me more than I could ever believe in myself, and Rohan for always supporting me through the highs and lows of this project.
 
