--- a/results.tex
+++ b/results.tex
@@ -16,7 +16,7 @@
 \label{fig: test1 app}
 \end{figure}
 
-Figure~\ref{fig: test1 picolog} shows the raw signals received on PicoLog, and Figure~\ref{fig: test1 app} shows the three signals received on the Chemical Composition page of the app after undergoing filtering and processing on the Arduino. The noise signal is shown in green in both plots, the square wave in blue, and the sine wave in red.
+NFigure~\ref{fig: test1 picolog} shows the raw signals received on PicoLog, and Figure~\ref{fig: test1 app} shows the three signals received on the Chemical Composition page of the app after undergoing filtering and processing on the Arduino. The noise signal is shown in green in both plots, the square wave in blue, and the sine wave in red.
 
 
 \subsection{Spreading Depolarisation}
