--- a/design.tex
+++ b/design.tex
@@ -1,4 +1,4 @@
-The prototype developed intends to be integrated with a PCB currently being developed by the research group. The PCB consists of five potentiometric channels, allowing for the measurement of potassium ion concentration, and four amperometric channels to allow for glucose and lactate concentration measurements. The potentiometric readings are amplified using an instrumental amplifier, and the amperometric readings are amplified using a transimpedance amplifier, which also converts the current to voltage. An ADS1298, which is a 24-bit resolution analogue-to-digital converter (ADC), receives the input measurements simultaneously and discretises and further amplifies the signals \cite{TexasInstruments2010}. An ATmega328p microcontroller is used and the PCB allows for both SPI (serial peripheral interface) and UART (universal asynchronous receiver-transmitter) data transmission capabilities. The PCB design is summarised in the block diagram in Figure~\ref{fig: PCB block diagram}.
+The prototype developed intends to be integrated with a PCB currently being developed by the research group. The PCB consists of five potentiometric channels, allowing for the measurement of potassium ion concentration, and four amperometric channels to allow for glucose and lactate concentration measurements. The potentiometric readings are amplified using an instrumental amplifier (IA), and the amperometric readings are amplified using a transimpedance amplifier (TIA), which also converts the inputted current to a voltage signal. An ADS1298, which is a 24-bit resolution analogue-to-digital converter (ADC), receives the input measurements simultaneously and discretises and further amplifies the signals \cite{TexasInstruments2010}. An ATmega328p microcontroller is used and the PCB allows for both SPI (serial peripheral interface) and UART (universal asynchronous receiver-transmitter) data transmission capabilities. The PCB design is summarised in the block diagram in Figure~\ref{fig: PCB block diagram}.
 
 \begin{figure}[h!]
 \centering
@@ -8,7 +8,7 @@ The prototype developed intends to be integrated with a PCB currently being deve
 \label{fig: PCB block diagram}
 \end{figure}
 
-\begin{figure}[t!]
+\begin{figure}[b!]
 \centering
 \includegraphics[trim={0cm 19.5cm 0.5cm  2.5cm}, clip, width=1\textwidth]{./figures/Flowchart.pdf}
 \captionsetup{justification=centering}
@@ -16,12 +16,12 @@ The prototype developed intends to be integrated with a PCB currently being deve
 \label{fig: flowchart}
 \end{figure}
 
-The prototype developed is a simplified model of the PCB. The prototype receives three amplified voltage signals, corresponding to glucose, lactate and potassium, so it continues on from the PCB block diagram after the ADS1298. The prototype then extends further from the functionality of the PCB by processing the received signals, developing the wireless transmission of the data and developing an iPad application, as shown in the flowchart in Figure~\ref{fig: flowchart}. The code for this project can be found in Appendix~\ref{appendix: a}.
+The prototype developed in this project is a simplified model of the PCB. The prototype receives three amplified voltage signals, corresponding to glucose, lactate and potassium, so it continues on from the PCB block diagram after the ADS1298. The prototype then extends further from the functionality of the PCB by processing the received signals, developing the wireless transmission of the data and developing an iPad application, as shown in the flowchart in Figure~\ref{fig: flowchart}. The code for this project can be found in Appendix~\ref{appendix: a}.
 
 
 
 \subsection{Hardware}
-The hardware of the prototype consists of an Arduino Nano and a Adafruit Bluefruit LE SPI Friend, as shown in Figure~\ref{fig: breadboard}. The Arduino Nano was chosen as a suitable microcontroller for prototyping and mimicking the PCB as it also contains an ATmega328p microcontroller and has an inbuilt ADC. However, the ADC is only 10-bit, so it has poorer resolution than the ADS1298. The Arduino is also simple to programme due to the IDE and libraries available, making it suitable for prototyping.
+The hardware for the prototype consists of an Arduino Nano and an Adafruit Bluefruit LE SPI Friend, as shown in Figure~\ref{fig: breadboard}. The Arduino Nano was chosen as a suitable microcontroller for prototyping and mimicking the PCB as it also contains an ATmega328p microcontroller and has an inbuilt ADC. However, the ADC is only 10-bit, so it has poorer resolution than the ADS1298. The Arduino is also simple to programme due to the IDE and libraries available, making it suitable for prototyping.
 
 \begin{figure}[H]
 \centering
@@ -31,7 +31,7 @@ The hardware of the prototype consists of an Arduino Nano and a Adafruit Bluefru
 \label{fig: breadboard}
 \end{figure}
 
-The Arduino Nano receives three input voltage signals ranging from 0V to 5V at the analogue pins A0, A1, and A7. These input pins correspond to glucose, lactate, and potassium. The signals are discretised by the inbuilt ADC. The Nano records the time at which each signal is read, along with the value of the signal, and then the recordings are processed before being passed to the Bluefruit.
+The Arduino Nano receives three input voltage signals ranging from 0V to 5V at the analogue pins A0, A1, and A7. These input pins correspond to glucose, lactate, and potassium. The signals are discretised by the Arduino's inbuilt ADC. The Arduino records the time at which each signal is read, along with the value of the signal, and then the recordings are processed before being passed to the Bluefruit.
 
 
 
@@ -55,7 +55,7 @@ For every five samples of data recorded, so in a 1s period, the mean voltage is 
 
 
 \subsubsection{Wireless Transmission}
-BLE and ZigBee are both popular wireless data transmission options for IoT projects. Table~\ref{table:BLE vs ZigBee} summarises the differences between BLE and ZigBee. For this project, BLE is the most suitable option. BLE offers more efficient data transfer, shown by the lower latency time and higher throughout, consumes less power, and is compatible with iOS. A disadvantage of BLE is that it has a shorter range than ZigBee, however this is not of hindrance as the range is sufficient for this project since the patient will remain close to the iPad that will receive the transmitted signals. BLE is commonly used for health and fitness trackers, making it a suitable method of transmission for this project's application.
+BLE and ZigBee are both popular wireless data transmission options for IoT projects. Table~\ref{table:BLE vs ZigBee} summarises the differences between BLE and ZigBee. For this project, BLE is the most suitable option as it offers more efficient data transfer, shown by the lower latency time and higher throughout, consumes less power, and is compatible with iOS. A disadvantage of BLE is that it has a shorter range than ZigBee, however this is not of hindrance as the range is sufficient for this project since the patient will remain close to the iPad that will receive the transmitted signals. BLE is commonly used for health and fitness trackers, making it a suitable method of transmission for this project's application.
 
 \begin{table}[h!]
 \centering
@@ -76,20 +76,20 @@ BLE and ZigBee are both popular wireless data transmission options for IoT proje
 \label{table:BLE vs ZigBee}
 \end{table}
 
-Adafruit provide a variety of Bluetooth low energy modules that are compatible with Arduino, and they provide a library that can be used with the Arduino IDE: Adafruit\_BluefruitLE\_nRF51. Adafruit also provide an iOS app to test the Bluetooth module and view the received signals. Whilst the PCB currently being developed allows for both SPI and UART data transmission, SPI was the chosen mode for the prototype hence the Bluefruit LE SPI Friend was chosen over the Bluefruit LE UART Friend. Both share similarities and use the same library in the Arduino IDE, however SPI was preferred as it has a clock line where data can be sent along with the clock pulses, so the timing of when data is sent is more reliable. Furthermore, the Bluefruit LE SPI Friend is smaller in size than the Bluefruit LE UART Friend, so allows the prototype to be miniaturised further. 
+Adafruit provide a variety of Bluetooth low energy modules that are compatible with Arduino, and they provide a library that can be used with the Arduino IDE: Adafruit\_BluefruitLE\_nRF51. Adafruit also provide an iOS app to test the Bluetooth module and view the received signals which is useful to test intermittent stages in the development process. Whilst the PCB currently being developed allows for both SPI and UART data transmission, SPI was the chosen mode of data transfer for the prototype hence the Bluefruit LE SPI Friend was chosen over the Bluefruit LE UART Friend. Both share similarities and use the same library in the Arduino IDE, however SPI was preferred as it has a clock line where data can be sent along with the clock pulses, so the timing of when data is sent is more reliable. Furthermore, the Bluefruit LE SPI Friend is smaller in size than the Bluefruit LE UART Friend, so allows the final design of the PCB to be made smaller.
 
 The Arduino Nano has inbuilt SPI pins: D11 is MOSI, D12 is MISO and D13 is SCK. These connect to the corresponding pins on the Bluefruit, which are shown by the orange connections in Figure~\ref{fig: breadboard}. D10 on the Arduino is programmed as the CS and D7 is programmed as the IRQ, which are then wired to the corresponding Bluefruit pins, shown by the blue wires in Figure~\ref{fig: breadboard}. 
 
 The Adafruit\_BluefruitLE\_nRF51 library provides a header file specifically for the Bluefruit LE SPI Friend which provides functions that allow for the transmission of data via BLE to a paired device. The function used is {\tt{ble.print()}}. The limitation of this function is that a maximum of 20 characters can be sent at a time otherwise the data becomes fragmented. This means that the data from each input pin and the corresponding time of recording had to be wirelessly transmitted one at a time rather than all three sent simultaneously to prevent the risk of the data fragmenting. The data from each input pin is outputted in characters as:
 
 \begin{align}
-    OutputString = ID + Time + Voltage + \backslash n.
+    \tt{OutputString = ID + Time + Voltage + \backslash n}.
     \nonumber
 \end{align}
 
 The \textit{ID} at the beginning identifies which signal is being sent i.e. G for glucose, and the newline character (\textit{$\backslash$n}) at the end concludes the string being transmitted. If both these identifiers are not present at these specific locations when received on the app, this indicates that the data is fragmented and the app will discard the data. 
 
-Another limitation was observed when all three strings were periodically sent within a 200ms period. The data would initially be sent correctly but after some time, the data would fragment. The Bluefruit struggled to send the data so quickly, which created a backlog of data that was responsible for the fragmentation. Eventually, the Bluetooth module would disconnect from the app. To prevent this, the three signals were periodically sent every 1s, spaced such that potassium was sent at 200ms, glucose at 600ms, and lactate on the 1s as highlighted in Figure~\ref{fig: psuedocode}. Since the electrochemical changes in the brain occur at slow rates, for example an SD event takes about 10 minutes, a sampling speed of 1s on the app is suitable for this application. 
+Another limitation was observed when all three strings were periodically sent within a 200ms period. The data would initially be sent correctly but after some time, the data would fragment. The Bluefruit struggled to send the data so quickly, which created a backlog of data that was responsible for the fragmentation. Eventually, the Bluetooth module would disconnect from the app. To prevent this, the three signals were periodically sent every 1s, spaced such that potassium was sent at 200ms, glucose at 600ms, and lactate on the 1s as highlighted in Figure~\ref{fig: psuedocode}. Since the neurochemical changes in the brain occur at slow rates, for example an SD event takes about 10 minutes, a sampling speed of 1s on the app is suitable for this application. 
 
 
 
@@ -109,17 +109,17 @@ The iPad app was written in Swift using XCode. The app layout is shown in Figure
 Once the user logs in, the app connects to the Bluefruit LE SPI Friend and receives the strings of data sent by the Bluefruit and checks that the \textit{ID} and newline character are in place. Depending on the \textit{ID}, the app stores the \textit{Time} and \textit{Voltage} string in arrays corresponding to the neurochemical signal being read, i.e. if the \textit{ID = G}, the \textit{Time} is appended to an array called  {\tt{Gtime}} and \textit{Voltage} is appended to an array called {\tt{Gvoltage}}. Each new data string for a given neurochemical signal is received every 1s. 
 
 \subsubsection{Real Time} \label{section: real time}
-The \textit{Time} string received is converted from the time in milliseconds into the real clock time at which the signal was read from the Arduino analogue input pin. It is important that the signals are timestamped with the real time of recording as opposed to the time at which the signals were received on the app because there may be a lag in transmission which may vary over time.
+The \textit{Time} string received is converted from the time in milliseconds since the Arduino turned on, into the real clock time at which the signal was read from the Arduino analogue input pin. It is important that the signals are timestamped with the real time of recording as opposed to the time at which the signals were received on the app because there may be a lag in transmission which may vary over time.
 
-The real time is calculated by taking the clock time at which the first input is received on the app, and subtracting the number of milliseconds encoded in the first \textit{Time} string. This provides a reference time, which is the real clock time at which the Arduino was first powered on, assuming that wireless transmission is negligible. Type casting is used to convert all subsequent \textit{Time} strings into doubles so that the time in milliseconds can be added to the reference time to obtain the real time at which the value was recorded on the Arduino.
+The real time is calculated by taking the clock time at which the first input is received on the app, and subtracting the number of milliseconds encoded in the first \textit{Time} string. This provides a reference time, which is the real clock time at which the Arduino was first powered on, assuming that the delay in the first wireless transmission is negligible. Type casting is used to convert all subsequent \textit{Time} strings into doubles so that the time in milliseconds can be added to the reference time to obtain the real time at which the value was recorded on the Arduino.
 
 
 \subsubsection{Charts API}
-To convey the information to the clinician clearly, the data received was displayed graphically using the Charts API developed by Daniel Gindi. The API allowed for basic graphs to be fully customised based on the needs of this project. The graphs display the voltage recorded from an input pin against the real clock time of the reading for each neurochemical signal. The app allows for all three signals to be viewed on one graph, as seen on the Chemical Composition page in Figure~\ref{fig: storyboard}, or as individual plots shown in pages 3a, 3b and 3c. These individual plots can be accessed by clicking on the graph legends on the Chemical Composition page, located above the graph. All graphs can be scaled and are zoombale, allowing to clearly view specific data. Furthermore, clicking on a specific point on a plot displays a grey bubble which shows the corresponding $x$ and $y$ value at that point. This feature can be seen on the Chemical Composition page in Figure~\ref{fig: storyboard} but works across all plots on all pages.
+To convey the information to the clinician clearly, the data received was displayed graphically using the Charts API developed by Daniel Gindi. The API allowed for basic graphs to be fully customised based on the needs of this project. The graphs display the voltage recorded from an input pin against the real clock time of the reading for each neurochemical signal. The app allows for all three signals to be viewed on one graph, as seen on the Chemical Composition page in Figure~\ref{fig: storyboard}, or as individual plots shown on pages 3a, 3b and 3c. These individual plots can be accessed by clicking on the graph legends on the Chemical Composition page, located above the graph. All graphs can be scaled and are zoombale, allowing to clearly view specific data. Furthermore, clicking on a specific point on a plot displays a grey bubble which shows the corresponding $x$ and $y$ value at that point. This feature can be seen on the Chemical Composition page in Figure~\ref{fig: storyboard} but works across all plots on all pages.
 
 
 \subsubsection{Calibration}
-In the individual concentration plots on pages 3a, 3b, and 3c in Figure~\ref{fig: storyboard}, in the top right corner of the graphs there is a segmented control button that has \textit{Voltage} on the left and \textit{Concentration} on the right. Selecting a button allows to view the graph with either voltage or concentration on the $y$-axis. To convert the voltage values received into the corresponding concentration of the neurochemical signal in the brain, the relationship between the two needs to be known. This is obtained through calibration. 
+For the individual concentration plots on pages 3a, 3b, and 3c in Figure~\ref{fig: storyboard}, in the top right corner of the graphs there is a segmented control button that has \textit{Voltage} on the left and \textit{Concentration} on the right. Selecting a button allows to view the graph with either voltage or concentration on the $y$-axis. To convert the voltage values received into the corresponding concentration of the neurochemical signal in the brain, the relationship between the two needs to be known. This is obtained through calibration. 
 
 \begin{table}[h!]
 \centering
@@ -205,7 +205,7 @@ Substituting equation (\ref{equation: log activity}) into equation (\ref{equatio
     \label{equation: C}
 \end{equation}
 
-\noindent where $V_{aCSF}$ is the voltage produced by the potassium ion concentration of $2.7mM$ in the aCSF, which is used as the reference solution, measured in volts. Only the voltage corresponding $[K^{+}] = 2.7mM$ is required from the calibration set up to be substituted into equations (\ref{equation: K+ calibration}) and (\ref{equation: C}). Once the user inputs this calibration value, the user can view the concentration against time graph on the Potassium Ion Concentration page once the $Concentration$ button is clicked. \newline
+\noindent where $V_{aCSF}$ is the voltage produced by the potassium ion concentration of $2.7mM$ in the aCSF which perfuses the microdialysis probe. The aCSF is used as the reference solution, measured in volts. Only the voltage corresponding $[K^{+}] = 2.7mM$ is required from the calibration set up to be substituted into equations (\ref{equation: K+ calibration}) and (\ref{equation: C}). Once the user inputs this calibration value, the user can view the concentration against time graph on the Potassium Ion Concentration page once the $Concentration$ button is clicked. \newline
 
 \begin{figure}[h!]
 \centering
@@ -219,7 +219,7 @@ Substituting equation (\ref{equation: log activity}) into equation (\ref{equatio
 \subsubsection{Glucose and Lactate Calibration}
 %\noindent \underline{Glucose and Lactate Calibration} 
 
-The conversion from voltage to concentration for glucose and lactate is derived from the enzymatic catalysed reaction that occurs on the electrode surface of the oxidase-based sensors \cite{Patel:2011:10.1016/j.bios.2010.11.033, Rogers2017}, and can be obtained by starting from the Hill equation. Since the sensors measure current, the Hill equation is written as
+The conversion from voltage to concentration for glucose and lactate is derived from the enzymatic catalysed reaction that occurs on the electrode surface of the oxidase-based sensors \cite{Patel2011, Rogers2017}, and can be obtained by starting from the Hill equation. Since the sensors measure current, the Hill equation is written as
 
 \begin{equation}
     I_{rate} = \frac{I_{max}}{1 + \big( \frac{K_{m}}{[S]} \big)^{n}},
